Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29625

Some clients/scripts refer to old slow log variables

    XMLWordPrintable

Details

    Description

      There are some scripts/files which use old slow-log-related variables. They should probably be updated now, to refer either to new names or both, depending on the context – new names should be enough if they look into the server, and both are needed if they look into the config files. Otherwise those which refer to config options may start malfunctioning as soon as users put new names in the configs, and those which refer to the server variables may be forgotten when the old variables get removed.

      So far I've found

      • client/mysqldump.c (setting SLOW_QUERY_LOG))
      • debian/additions/mariadb.conf.d/50-server.cnf (variable examples)
      • debian/additions/mariadb-report (reading variables)
      • scripts/mysqldumpslow.sh (retrieving slow file log name)
      • scripts/mysql_system_tables_fix.sql (unsetting slow logging temporarily)
      • scripts/wsrep_sst_mysqldump.sh (unsetting slow logging temporarily)
      • scripts/sys_schema/procedures/ps_trace_thread_57.sql, scripts/sys_schema/procedures/ps_trace_thread.sql - using long query time in a condition
      • tests/mysql_client_test.c (changing the variables)

      The list may be incomplete, and naturally it doesn't include MTR which will hopefully notice when the variables get finally removed (or if it doesn't notice, it's useless anyway).

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 50m
                  50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.