MDEV-29625 Some clients/scripts refer to old slow log variables